[ds1619] Fixed alignment of listings and requests

--- a/src/pages/MarketPlace/Listing.css
+++ b/src/pages/MarketPlace/Listing.css
@@ -1,10 +1,9 @@
 .Listing {
     text-align: center;
-    width: 25%;
+    width: 23%;
     min-height: max-content;
-    margin: 0 1ex 0 1ex;
+    margin: 0 0.5% 0 0.5%;
     position: relative;
-    padding: 1ex;
     padding-bottom: 5ex;
     border: 0.5ex #0af solid;
     background-color: #efefef;
