--- a/src/pages/Request/Request.css
+++ b/src/pages/Request/Request.css
@@ -1,15 +1,14 @@
 .Request {
     text-align: center;
-    width: 25%;
+    width: 23.5%;
     min-height: max-content;
-    margin: 0 1% 0 1%;
-    padding: 0 1% 0 1%;
     position: relative;
     padding-bottom: 5ex;
     border-width: 0.3ex;
     border-radius: 2ex;
     border-style: solid;
     background-color: #efefef;
+    margin: 0% 0.5% 0% 0.5%;
 }
 
 .DefaultRequestPicture {
