--- a/src/pages/Request/RequestRow.css
+++ b/src/pages/Request/RequestRow.css
@@ -1,5 +1,6 @@
 .Row {
     display: flex;
     text-align: center;
-    margin: 1% 0% 0% 0%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
